Move the documentation to an Extends sub folder and add an overview mdx that follows the existing pattern for decorators

--- a/test/storybook/docs/Testing/Behavior/Extends/extends-eval.mdx
+++ b/test/storybook/docs/Testing/Behavior/Extends/extends-eval.mdx
@@ -1,11 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import errorImg from './extends-compiler-error.png';
 
-<Meta title="Testing/Behavior/Composition/Extends Evaluation" tags={['dev-only', 'pending-review']} />
+<Meta title="Testing/Behavior/Extends/Extends Evaluation" tags={['pending-review']} />
 
 # Extends-Only Phase 1 Evaluation
 
-> Historical background: see [Historical @Controller Context](?path=/docs/testing-behavior-composition-historical-controller-context--docs).
+> Historical background: see [Historical @Controller Context](?path=/docs/testing-behavior-extends-historical-controller-context--docs).
 
 ## References
 - PR enabling component inheritance: <a href="https://github.com/stenciljs/core/pull/6362" target="_blank" rel="noopener noreferrer">PR #6362</a>
