--- a/test/storybook/docs/Testing/Behavior/Extends/initial-context.mdx
+++ b/test/storybook/docs/Testing/Behavior/Extends/initial-context.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Behavior/Composition/Historical Controller Context" tags={['dev-only','pending-review']} />
+<Meta title="Testing/Behavior/Extends/Historical Controller Context" tags={['pending-review']} />
 
 ## References
 
